rewrite with java HTTP and update location of appleton tower