@@ -4,7 +4,10 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 
 import org.json.JSONArray;
@@ -13,50 +16,34 @@ import org.json.JSONException;
 
 /**
  * Class used to read Json files from our web server
- * Added org.json:json artifact for this class to function
- * Taken heavy inspiration from the following discussion:
- * https://stackoverflow.com/questions/4308554/simplest-way-to-read-json-from-a-url-in-java
  */
 public class ReadJson {
+    private final String url;
+    private static final HttpClient client = HttpClient.newHttpClient();
+
     /**
-     * read from a reader created by readJsonFromUrl into a String
-     * @param reader reader created by method readJsonFromUrl
-     * @return a string containing all content read by the reader
+     *
+     * @param url the address of the JSON file on the web server
      */
-    private static String readAll(BufferedReader reader) {
-        StringBuilder buffer = new StringBuilder();
-        // read all lines in the json file
-        while (true) {
-            String line;
-            try {
-                line = reader.readLine();
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-            if (line == null) {
-                break;
-            } else {
-                buffer.append(line);
-                buffer.append("\n");
-            }
-        }
-        return buffer.toString();
+    public ReadJson(String url) {
+        this.url = url;
     }
 
     /**
      * read a json file from a web server
-     * @param url the address of the JSON file on the web server
-     * @return the JSON object read from the file, in this case will be a JSON Array
+     * @return the JSON Array read from the file
      */
-    public static JSONArray readJsonFromUrl(String url) {
+    public JSONArray readJsonFromUrl() {
         try {
-            // open the url directed to the JSON file to read
-            InputStream is = new URL(url).openStream();
-            BufferedReader reader = new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8));
-            String jsonText = readAll(reader);;
-            return new JSONArray(jsonText);
-        } catch (JSONException | IOException ex) {
-            System.err.println(ex);
+            HttpRequest request = HttpRequest.newBuilder().uri(URI.create(url)).build();
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            if (response.statusCode() != 200) {
+                System.err.println("Server connection error");
+                return null;
+            }
+            return new JSONArray(response.body());
+        } catch (IOException | InterruptedException | JSONException ex) {
+            System.err.println(ex.getMessage());
             return null;
         }
     }
